--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gsap": "^3.13.0",
     "leva": "^0.10.1",
     "lucide-react": "^0.552.0",
+    "mathjs": "^15.0.0",
     "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
