--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.14",
     "leva": "^0.10.1",
     "lucide-react": "^0.552.0",
     "mathjs": "^15.0.0",
     "motion": "^12.23.24",
+    "ogl": "^1.0.11",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1",
