--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "@react-three/csg": "^4.0.0",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
     "@react-three/postprocessing": "^3.0.4",
+    "@react-three/rapier": "^2.2.0",
     "@tailwindcss/vite": "^4.1.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gltfjsx": "^6.5.3",
     "gsap": "^3.13.0",
     "lenis": "^1.3.14",
     "leva": "^0.10.1",
@@ -28,7 +32,8 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.15",
     "three": "^0.181.2",
-    "three-globe": "^2.45.0"
+    "three-globe": "^2.45.0",
+    "three-mesh-bvh": "^0.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
