--- a/package.json
+++ b/package.json
@@ -10,25 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^10.7.6",
-    "@react-three/fiber": "^9.4.0",
-    "@react-three/postprocessing": "^3.0.4",
+    "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
-    "lenis": "^1.3.14",
     "leva": "^0.10.1",
     "lucide-react": "^0.552.0",
-    "mathjs": "^15.0.0",
-    "motion": "^12.23.24",
     "ogl": "^1.0.11",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.15",
-    "three": "^0.181.0",
-    "three-globe": "^2.45.0"
+    "tailwindcss": "^4.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
