--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "leva": "^0.10.1",
     "lucide-react": "^0.552.0",
     "ogl": "^1.0.11",
+    "prettier": "^3.7.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1",
