--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gsap": "^3.13.0",
     "leva": "^0.10.1",
     "lucide-react": "^0.552.0",
+    "motion": "^12.23.26",
     "ogl": "^1.0.11",
     "prettier": "^3.7.4",
     "react": "^19.1.1",
